--- a/game.html
+++ b/game.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rock, Paper, Scissors</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel ="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <div class="container">
         <h1 class="text-center">Rock, Paper, Scissors</h1>
 
         <div id="enter-game-panel" class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-tittle">Would you like to</h3>
+            <div class="panel-heading">
+                <h3 class="panel-tittle">Would you like to</h3>
             </div>
             <div class="panel-body">
                 <form id="player-form" class="form-group">
-                <input id="player-name" class="col-xs-10" type="text" placeholder="Name">
-                <button id="name-submit-button" class="btn btn-success col-xs-2" type="submit">Start</button>
+                    <input id="player-name" class="col-xs-10" type="text" placeholder="Name">
+                    <button id="name-submit-button" class="btn btn-success col-xs-2" type="submit">Start</button>
                 </form>
             </div>
         </div>
@@ -29,9 +31,41 @@
         </div>
         <div class="panel panel-default">
             <div class="panel-heading">
-                
+                <h3 class="panel-tittle">Play</h3>
+            </div>
+            <div class="panel-body">
+                <div class="game-section" id="p1-section">
+                    <div id="p1-name" class="p-not-entered">Waiting for Player1</div>
+                    <div id="p1-choises"></div>
+                    <div id="p1-stats">Wins:<span id="p1 wins">0</span>| Losses: <span id="p1-losses">0</span></div>
+                </div>
+                <div class="game-section">
+                    <div id="outcome-container">
+                        <div id="outcome"></div>
+                    </div>
+                </div>
+                <div class="game-section" id="p2-section">
+                    <div id="p2-name" class="p-not-entered">Waiting for Player 2</div>
+                    <div id="p2-choices"></div>
+                    <div id="p1-stats">Wins: <span id="p2-wins">0</span> | Losses: <span id="p2-losses">0</span></div>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Chat</h3>
+            </div>
+            <div class="panel-body">
+                <div class="chat-container">
+                    <ul id="message-view"></ul>
+                    <form id="chat-input" class="form-group">
+                        <input id="chat-message" type="text" class="col-xs-10">
+                        <button id="send-button" class="bt btn-success col-xs-2" type="submit">Send</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
